vendor/plutovg/code/include/plutovg.h


typedef void (*plutovg_destroy_func_t)(void* closure);
typedef struct plutovg_point {
    float x; 
    float y; 
} plutovg_point_t;
typedef struct plutovg_rect {
    float x; 
    float y; 
    float w; 
    float h; 
} plutovg_rect_t;
typedef struct plutovg_matrix {
    float a; 
    float b; 
    float c; 
    float d; 
    float e; 
    float f; 
} plutovg_matrix_t;
PLUTOVG_API void plutovg_matrix_init_identity(plutovg_matrix_t* matrix);
PLUTOVG_API void plutovg_matrix_translate(plutovg_matrix_t* matrix, float tx, float ty);
PLUTOVG_API void plutovg_matrix_scale(plutovg_matrix_t* matrix, float sx, float sy);
PLUTOVG_API void plutovg_matrix_rotate(plutovg_matrix_t* matrix, float angle);
PLUTOVG_API void plutovg_matrix_map_point(const plutovg_matrix_t* matrix, const plutovg_point_t* src, plutovg_point_t* dst);
typedef struct plutovg_path plutovg_path_t;
typedef enum plutovg_text_encoding {
    PLUTOVG_TEXT_ENCODING_LATIN1, 
    PLUTOVG_TEXT_ENCODING_UTF8, 
    PLUTOVG_TEXT_ENCODING_UTF16, 
    PLUTOVG_TEXT_ENCODING_UTF32 
} plutovg_text_encoding_t;
typedef unsigned int plutovg_codepoint_t;
typedef struct plutovg_font_face plutovg_font_face_t;
PLUTOVG_API plutovg_font_face_t* plutovg_font_face_load_from_file(const char* filename, int ttcindex);
PLUTOVG_API plutovg_font_face_t* plutovg_font_face_load_from_data(const void* data, unsigned int length, int ttcindex, plutovg_destroy_func_t destroy_func, void* closure);
PLUTOVG_API void plutovg_font_face_destroy(plutovg_font_face_t* face);
PLUTOVG_API void plutovg_font_face_get_kerning(plutovg_font_face_t* face, float size, int codepoint1, int codepoint2, int* kerning);
PLUTOVG_API void plutovg_font_face_get_glyph_metrics(plutovg_font_face_t* face, float size, plutovg_codepoint_t codepoint, float* advance_width, float* left_side_bearing, plutovg_rect_t* extents);
PLUTOVG_API float plutovg_font_face_text_extents(plutovg_font_face_t* face, float size, const void* text, int length, plutovg_text_encoding_t encoding, plutovg_rect_t* extents);
typedef struct plutovg_color {
    float r; 
    float g; 
    float b; 
    float a; 
} plutovg_color_t;
typedef struct plutovg_surface plutovg_surface_t;
PLUTOVG_API plutovg_surface_t* plutovg_surface_create(int width, int height);
PLUTOVG_API plutovg_surface_t* plutovg_surface_create_for_data(unsigned char* data, int width, int height, int stride);
PLUTOVG_API plutovg_surface_t* plutovg_surface_load_from_image_data(const void* data, int length);
PLUTOVG_API void plutovg_surface_destroy(plutovg_surface_t* surface);
PLUTOVG_API unsigned char* plutovg_surface_get_data(const plutovg_surface_t* surface);
PLUTOVG_API int plutovg_surface_get_width(const plutovg_surface_t* surface);
PLUTOVG_API int plutovg_surface_get_height(const plutovg_surface_t* surface);
PLUTOVG_API int plutovg_surface_get_stride(const plutovg_surface_t* surface);
PLUTOVG_API void plutovg_surface_clear(plutovg_surface_t* surface, const plutovg_color_t* color);
PLUTOVG_API bool plutovg_surface_write_to_png(const plutovg_surface_t* surface, const char* filename);
PLUTOVG_API void plutovg_convert_argb_to_rgba(unsigned char* dst, const unsigned char* src, int width, int height, int stride);
typedef enum {
    PLUTOVG_TEXTURE_TYPE_PLAIN, 
    PLUTOVG_TEXTURE_TYPE_TILED 
} plutovg_texture_type_t;
typedef enum {
    PLUTOVG_SPREAD_METHOD_PAD, 
    PLUTOVG_SPREAD_METHOD_REFLECT, 
    PLUTOVG_SPREAD_METHOD_REPEAT 
} plutovg_spread_method_t;
typedef struct {
    float offset; 
    plutovg_color_t color; 
} plutovg_gradient_stop_t;
typedef struct plutovg_paint plutovg_paint_t;
PLUTOVG_API plutovg_paint_t* plutovg_paint_create_rgba(float r, float g, float b, float a);
PLUTOVG_API plutovg_paint_t* plutovg_paint_create_linear_gradient(float x1, float y1, float x2, float y2,
    plutovg_spread_method_t spread, const plutovg_gradient_stop_t* stops, int nstops, const plutovg_matrix_t* matrix);
PLUTOVG_API plutovg_paint_t* plutovg_paint_create_radial_gradient(float cx, float cy, float cr, float fx, float fy, float fr,
    plutovg_spread_method_t spread, const plutovg_gradient_stop_t* stops, int nstops, const plutovg_matrix_t* matrix);
PLUTOVG_API plutovg_paint_t* plutovg_paint_create_texture(plutovg_surface_t* surface, plutovg_texture_type_t type, float opacity, const plutovg_matrix_t* matrix);
PLUTOVG_API void plutovg_paint_destroy(plutovg_paint_t* paint);
typedef enum {
    PLUTOVG_FILL_RULE_NON_ZERO, 
    PLUTOVG_FILL_RULE_EVEN_ODD 
} plutovg_fill_rule_t;
typedef enum {
    PLUTOVG_OPERATOR_CLEAR,       
    PLUTOVG_OPERATOR_SRC,         
    PLUTOVG_OPERATOR_DST,         
    PLUTOVG_OPERATOR_SRC_OVER,    
    PLUTOVG_OPERATOR_DST_OVER,    
    PLUTOVG_OPERATOR_SRC_IN,      
    PLUTOVG_OPERATOR_DST_IN,      
    PLUTOVG_OPERATOR_SRC_OUT,     
    PLUTOVG_OPERATOR_DST_OUT,     
    PLUTOVG_OPERATOR_SRC_ATOP,    
    PLUTOVG_OPERATOR_DST_ATOP,    
    PLUTOVG_OPERATOR_XOR          
} plutovg_operator_t;
typedef struct plutovg_canvas plutovg_canvas_t;
PLUTOVG_API plutovg_canvas_t* plutovg_canvas_create(plutovg_surface_t* surface);
PLUTOVG_API void plutovg_canvas_destroy(plutovg_canvas_t* canvas);
PLUTOVG_API void plutovg_canvas_save(plutovg_canvas_t* canvas);
PLUTOVG_API void plutovg_canvas_restore(plutovg_canvas_t* canvas);
PLUTOVG_API void plutovg_canvas_set_rgba(plutovg_canvas_t* canvas, float r, float g, float b, float a);
PLUTOVG_API void plutovg_canvas_set_color(plutovg_canvas_t* canvas, const plutovg_color_t* color);
PLUTOVG_API void plutovg_canvas_set_linear_gradient(plutovg_canvas_t* canvas, float x1, float y1, float x2, float y2,
    plutovg_spread_method_t spread, const plutovg_gradient_stop_t* stops, int nstops, const plutovg_matrix_t* matrix);
PLUTOVG_API void plutovg_canvas_set_radial_gradient(plutovg_canvas_t* canvas, float cx, float cy, float cr, float fx, float fy, float fr,
    plutovg_spread_method_t spread, const plutovg_gradient_stop_t* stops, int nstops, const plutovg_matrix_t* matrix);
PLUTOVG_API void plutovg_canvas_set_texture(plutovg_canvas_t* canvas, plutovg_surface_t* surface, plutovg_texture_type_t type, float opacity, const plutovg_matrix_t* matrix);
PLUTOVG_API void plutovg_canvas_set_paint(plutovg_canvas_t* canvas, plutovg_paint_t* paint);
PLUTOVG_API void plutovg_canvas_set_font(plutovg_canvas_t* canvas, plutovg_font_face_t* face, float size);
PLUTOVG_API void plutovg_canvas_set_fill_rule(plutovg_canvas_t* canvas, plutovg_fill_rule_t winding);
PLUTOVG_API void plutovg_canvas_set_operator(plutovg_canvas_t* canvas, plutovg_operator_t op);
PLUTOVG_API void plutovg_canvas_set_opacity(plutovg_canvas_t* canvas, float opacity);
PLUTOVG_API void plutovg_canvas_set_line_width(plutovg_canvas_t* canvas, float line_width);
PLUTOVG_API void plutovg_canvas_translate(plutovg_canvas_t* canvas, float tx, float ty);
PLUTOVG_API void plutovg_canvas_scale(plutovg_canvas_t* canvas, float sx, float sy);
PLUTOVG_API void plutovg_canvas_rotate(plutovg_canvas_t* canvas, float angle);
PLUTOVG_API void plutovg_canvas_transform(plutovg_canvas_t* canvas, const plutovg_matrix_t* matrix);
PLUTOVG_API void plutovg_canvas_reset_matrix(plutovg_canvas_t* canvas);
PLUTOVG_API void plutovg_canvas_set_matrix(plutovg_canvas_t* canvas, const plutovg_matrix_t* matrix);
PLUTOVG_API void plutovg_canvas_map(const plutovg_canvas_t* canvas, float x, float y, float* xx, float* yy);
PLUTOVG_API void plutovg_canvas_move_to(plutovg_canvas_t* canvas, float x, float y);
PLUTOVG_API void plutovg_canvas_line_to(plutovg_canvas_t* canvas, float x, float y);
PLUTOVG_API void plutovg_canvas_arc_to(plutovg_canvas_t* canvas, float rx, float ry, float angle, bool large_arc_flag, bool sweep_flag, float x, float y);
PLUTOVG_API void plutovg_canvas_rect(plutovg_canvas_t* canvas, float x, float y, float w, float h);
PLUTOVG_API void plutovg_canvas_round_rect(plutovg_canvas_t* canvas, float x, float y, float w, float h, float rx, float ry);
PLUTOVG_API void plutovg_canvas_add_path(plutovg_canvas_t* canvas, const plutovg_path_t* path);
PLUTOVG_API void plutovg_canvas_close_path(plutovg_canvas_t* canvas);
PLUTOVG_API void plutovg_canvas_fill(plutovg_canvas_t* canvas);
PLUTOVG_API void plutovg_canvas_stroke(plutovg_canvas_t* canvas);
PLUTOVG_API void plutovg_canvas_clip(plutovg_canvas_t* canvas);
PLUTOVG_API void plutovg_canvas_paint(plutovg_canvas_t* canvas);
PLUTOVG_API void plutovg_canvas_fill_preserve(plutovg_canvas_t* canvas);
PLUTOVG_API void plutovg_canvas_stroke_preserve(plutovg_canvas_t* canvas);
PLUTOVG_API void plutovg_canvas_clip_preserve(plutovg_canvas_t* canvas);
PLUTOVG_API void plutovg_canvas_fill_rect(plutovg_canvas_t* canvas, float x, float y, float w, float h);
PLUTOVG_API void plutovg_canvas_stroke_rect(plutovg_canvas_t* canvas, float x, float y, float w, float h);
PLUTOVG_API void plutovg_canvas_clip_rect(plutovg_canvas_t* canvas, float x, float y, float w, float h);
PLUTOVG_API float plutovg_canvas_add_glyph(plutovg_canvas_t* canvas, plutovg_codepoint_t codepoint, float x, float y);
PLUTOVG_API float plutovg_canvas_add_text(plutovg_canvas_t* canvas, const void* text, int length, plutovg_text_encoding_t encoding, float x, float y);
PLUTOVG_API float plutovg_canvas_fill_text(plutovg_canvas_t* canvas, const void* text, int length, plutovg_text_encoding_t encoding, float x, float y);